# setuptools-modernize

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
src/setuptools_modernize/: parse.py  python_requires.py
tests/: test_package.py
